--- a/package.json
+++ b/package.json
@@ -18,14 +18,15 @@
   },
   "homepage": "https://github.com/maxasker/BeaverCoffee#readme",
   "dependencies": {
-    "gulp": "^3.9.1",
-    "gulp-nodemon": "^2.2.1",
-    "gulp-semistandard": "^1.0.0",
     "body-parser": "^1.18.3",
     "cors": "^2.8.4",
     "express": "^4.16.3",
     "express2": "^5.15.3",
+    "gulp": "^3.9.1",
+    "gulp-nodemon": "^2.2.1",
+    "gulp-semistandard": "^1.0.0",
     "mongodb": "^3.1.0-beta4",
-    "mongoose": "^5.1.1"
+    "mongoose": "^5.1.1",
+    "mongoose-history": "^0.6.0"
   }
 }
